cmake_minimum_required(VERSION 3.14)
project(Leetcode400)

set(CMAKE_CXX_STANDARD 14)

add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(80 80.cpp)
add_executable(277 277.cpp)
add_executable(41 41.cpp)
add_executable(189 189.cpp)
add_executable(299 299.cpp)
add_executable(134 134.cpp)
add_executable(274 274.cpp)
add_executable(275 275.cpp)
add_executable(1 1.cpp)
add_executable(617 617.cpp)
add_executable(244 244.cpp)
add_executable(243 243.cpp)
add_executable(245 245.cpp)
add_executable(217 217.cpp)
add_executable(55 55.cpp)
add_executable(57 57.cpp)
add_executable(56 56.cpp)
add_executable(252 252.cpp)
add_executable(28 28.cpp)
add_executable(14 14.cpp)
add_executable(45 45.cpp)
add_executable(20 20.cpp)
add_executable(387 387.cpp)
add_executable(461 461.cpp)
add_executable(253 253.cpp)
add_executable(58 58.cpp)