cmake_minimum_required(VERSION 3.14)
project(Leetcode400)

set(CMAKE_CXX_STANDARD 14)

add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(80 80.cpp)
add_executable(277 277.cpp)
add_executable(41 41.cpp)
add_executable(189 189.cpp)
add_executable(299 299.cpp)
add_executable(134 134.cpp)
add_executable(274 274.cpp)
add_executable(275 275.cpp)
add_executable(1 1.cpp)
add_executable(617 617.cpp)
add_executable(244 244.cpp)
add_executable(243 243.cpp)
add_executable(245 245.cpp)
add_executable(217 217.cpp)
add_executable(55 55.cpp)
add_executable(57 57.cpp)
add_executable(56 56.cpp)
add_executable(252 252.cpp)
add_executable(28 28.cpp)
add_executable(14 14.cpp)
add_executable(45 45.cpp)
add_executable(20 20.cpp)
add_executable(387 387.cpp)
add_executable(461 461.cpp)
add_executable(253 253.cpp)
add_executable(383 383.cpp)
add_executable(58 58.cpp)
add_executable(344 344.cpp)
add_executable(151 151.cpp)
add_executable(186 186.cpp)
add_executable(345 345.cpp)
add_executable(205 205.cpp)
add_executable(293 293.cpp)
add_executable(69 69.cpp)
add_executable(50 50.cpp)
add_executable(367 367.cpp)
add_executable(365 365.cpp)
add_executable(167 167.cpp)
add_executable(294 294.cpp)
add_executable(290 290.cpp)
add_executable(242 242.cpp)
add_executable(49 49.cpp)
add_executable(249 249.cpp)
add_executable(161 161.cpp)
add_executable(38 38.cpp)
add_executable(271 271.cpp)
add_executable(168 168.cpp)
add_executable(171 171.cpp)
add_executable(13 13.cpp)
add_executable(7 7.cpp)
add_executable(165 165.cpp)
add_executable(66 66.cpp)
add_executable(8 8.cpp)
add_executable(15 15.cpp)
add_executable(144 144.cpp)
add_executable(94 94.cpp)
add_executable(145 145.cpp)
add_executable(102 102.cpp)
add_executable(100 100.cpp)
add_executable(101 101.cpp)
add_executable(226 226.cpp)
add_executable(257 257.cpp)
add_executable(112 112.cpp)
add_executable(113 113.cpp)
add_executable(2 2.cpp)
add_executable(21 21.cpp)
add_executable(70 70.cpp)
add_executable(98 98.cpp)
add_executable(235 235.cpp)
add_executable(129 129.cpp)
add_executable(298 298.cpp)
add_executable(366 366.cpp)
add_executable(337 337.cpp)
add_executable(107 107.cpp)
add_executable(103 103.cpp)
add_executable(199 199.cpp)
add_executable(236 236.cpp)
add_executable(108 108.cpp)
add_executable(109 109.cpp)
add_executable(78 78.cpp)
add_executable(90 90.cpp)
add_executable(77 77.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(216 216.cpp)
add_executable(377 377.cpp)
add_executable(24 24.cpp)
add_executable(83 83.cpp)
add_executable(203 203.cpp)
add_executable(82 82.cpp)
add_executable(369 369.cpp)
add_executable(328 328.cpp)
add_executable(92 92.cpp)
add_executable(237 237.cpp)
add_executable(19 19.cpp)
add_executable(160 160.cpp)
add_executable(278 278.cpp)
add_executable(test test.cpp)
add_executable(35 35.cpp)
add_executable(33 33.cpp)
add_executable(162 162.cpp)
add_executable(153 153.cpp)
add_executable(374 374.cpp)
add_executable(34 34.cpp)
add_executable(349 349.cpp)
add_executable(350 350.cpp)
add_executable(48 48.cpp)
add_executable(54 54.cpp)
add_executable(59 59.cpp)
add_executable(73 73.cpp)
add_executable(347 347.cpp)
add_executable(311 311.cpp)
add_executable(378 378.cpp)
add_executable(74 74.cpp)
add_executable(240 240.cpp)
add_executable(370 370.cpp)
add_executable(79 79.cpp)
add_executable(361 361.cpp)
add_executable(200 200.cpp)
add_executable(286 286.cpp)
add_executable(130 130.cpp)
add_executable(339 339.cpp)
add_executable(364 364.cpp)
add_executable(127 127.cpp)
add_executable(155 155.cpp)
add_executable(232 232.cpp)
add_executable(225 225.cpp)
add_executable(150 150.cpp)
add_executable(71 71.cpp)
add_executable(388 388.cpp)
add_executable(394 394.cpp)
add_executable(215 215.cpp)
add_executable(389 389.cpp)
add_executable(136 136.cpp)
add_executable(318 318.cpp)